--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ body {
   width: 100%;
 }
 
+.full-size{
+  height: 100%;
+  width: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
